fix: single page card margin on mobile

--- a/assets/scss/partials/mobile.scss
+++ b/assets/scss/partials/mobile.scss
@@ -106,7 +106,8 @@ main {
 // mobile small card margin
 @media screen and (max-width: $tablet) {
   .main-container,
-  .list-container {
+  .list-container,
+  .single-container {
     padding: $amzrk2-space-sm;
   }
   .list-content,
@@ -116,7 +117,8 @@ main {
       margin-bottom: $amzrk2-space-sm;
     }
   }
-  .column.list-content.is-three-quarters {
+  .column.list-content.is-three-quarters,
+  .column.single-content.is-three-quarters {
     padding-bottom: 0.25rem;
   }
   .column.main-sidebar.is-one-quarter {
